# md-hub

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.sh
engines/: templates.yaml  to_docx.py  to_hwp.py  to_md.py  to_pdf.py  to_pptx.py
presentation/: .mcp.json  package-lock.json  package.json  tsconfig.json
presentation/src/__tests__/: html-pipeline.test.ts
presentation/src/html-pipeline/: cli.ts  config.ts  hybrid-renderer.ts  orchestrator.ts  preset-to-css.ts
presentation/src/html-pipeline/prompts/: html-designer.md  hybrid-free.md  hybrid.md  message-architect.md  research.md  verify.md
presentation/src/profile/: cli.ts  frontmatter.ts  index.ts  paths.ts  pptx-extractor.ts  preset-matcher.ts  reader.ts  snapshot.ts  types.ts  writer.ts
presentation/src/profile/__tests__/: frontmatter.test.ts  pptx-extractor.test.ts  preset-matcher.test.ts  reader.test.ts  snapshot.test.ts  writer.test.ts
presentation/src/themes/: presets.ts  purpose-profiles.ts  types.ts
presentation/tools/slides-grab/scripts/: editor-server.js
presentation/tools/slides-grab/src/editor/js/: editor-ai-edit.js  editor-direct-edit.js  editor-dom.js  editor-history.js  (+4 more)
presentation/tools/slides-grab/test-slides/: slide-01.html  slide-02.html
skills/docx/: skill.md
skills/pdf/: skill.md
skills/pdf-to-md/: skill.md
skills/presentation/: skill.md
skills/presentation/references/: .gitignore  design-specs.md  editor-guide.md  html-generation.md  style-presets.md  visual-archetypes.md
src/md_hub/: server.py  template_loader.py
src/md_hub/engines/: to_docx.py  to_pdf.py
src/tests/: test_template_loader.py  test_to_docx.py  test_to_md.py  test_to_pdf.py
tests/: test_template_loader.py  test_to_docx.py  test_to_md.py  test_to_pdf.py
